// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RebuildHistory /> should render <LoadingPlaceholder /> when unbuilt is null 1`] = `
<Uncontrolled(Panel)
  className="panel-default"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Changes
  </PanelHeading>
  <LoadingPlaceholder
    margin="22px"
  />
</Uncontrolled(Panel)>
`;

exports[`<RebuildHistory /> should render with error 1`] = `
<Uncontrolled(Panel)
  className="panel-danger"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Changes
  </PanelHeading>
  <ListGroup
    bsClass="list-group"
    style={
      Object {
        "maxHeight": "700px",
        "overflowY": "auto",
      }
    }
  >
    <RebuildHistoryItem
      description="test-description"
      key="123abc"
      otuName="test-otu"
    />
    <RebuildHistoryEllipsis
      unbuilt={
        Object {
          "documents": Array [
            Object {
              "description": "test-description",
              "id": "123abc",
              "otu": Object {
                "name": "test-otu",
              },
            },
          ],
          "page_count": 2,
          "per_page": 5,
          "total_count": 10,
        }
      }
    />
  </ListGroup>
</Uncontrolled(Panel)>
`;

exports[`<RebuildHistory /> should render without error 1`] = `
<Uncontrolled(Panel)
  className="panel-default"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Changes
  </PanelHeading>
  <ListGroup
    bsClass="list-group"
    style={
      Object {
        "maxHeight": "700px",
        "overflowY": "auto",
      }
    }
  >
    <RebuildHistoryItem
      description="test-description"
      key="123abc"
      otuName="test-otu"
    />
    <RebuildHistoryEllipsis
      unbuilt={
        Object {
          "documents": Array [
            Object {
              "description": "test-description",
              "id": "123abc",
              "otu": Object {
                "name": "test-otu",
              },
            },
          ],
          "page_count": 2,
          "per_page": 5,
          "total_count": 10,
        }
      }
    />
  </ListGroup>
</Uncontrolled(Panel)>
`;

exports[`<RebuildHistoryEllipsis /> should render when page_count greater than 1 1`] = `
<History__StyledRebuildHistoryEllipsis
  key="last-item"
>
  + 
  48
   more changes
</History__StyledRebuildHistoryEllipsis>
`;

exports[`<RebuildHistoryEllipsis /> should render when page_count is 1 1`] = `""`;

exports[`<RebuildHistoryItem /> should render with description 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <strong>
        Foobar Virus
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={7}
    >
      Removed OTU
    </Col>
  </Row>
</ListGroupItem>
`;

exports[`<RebuildHistoryItem /> should render without description 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  listItem={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <strong>
        Foobar Virus
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={7}
    >
      No Description
    </Col>
  </Row>
</ListGroupItem>
`;
